# archviz-ai

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-azure.yml
api/: __init__.py  main.py
api/routes/: __init__.py  chat.py  health.py  materials.py  notifications.py  projects.py  render.py  room_pipeline.py
core/: __init__.py
core/azure/: __init__.py  config.py  openai_service.py  storage_service.py
core/dwg_parser/: __init__.py  converter.py  elements.py  parser.py  room_classifier.py  spatial_utils.py  wall_graph.py
core/materials/: __init__.py  fetcher.py  library.py  presets.py  suggester.py  texture_generator.py  types.py
core/model_gen/: __init__.py  exporter.py  extruder.py  (+6 more)
docs/: TEST_EXECUTION_REPORT.md  TEST_PLAN.md  USER_FLOWS_AND_TESTING.md
electron/: package.json
frontend/: .env.example  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package.json  staticwebapp.config.json  tailwind.config.ts
infra/: deploy.sh  main.bicep  resources.bicep
k8s/: api.yaml  configmap.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
scripts/: demo.sh  dev.sh  test.sh
tests/: __init__.py  test_api.py  test_blender_renderer.py  test_boundaries.py  test_camera_path.py  test_chat.py  test_concurrent.py  test_dalle_integration.py  test_e2e_workflow.py  test_furniture_library.py  test_furniture_placer.py  test_materials.py  test_materials_core.py  test_model_gen.py  test_projects.py  test_render.py  test_render_pipeline.py  test_resilience.py  test_room_classifier.py  test_room_detection.py  test_room_pipeline_api.py  test_room_pipeline_integration.py  test_security.py  test_shell_builder.py  test_spatial_utils.py  test_texture_generator.py  test_video_generator.py  test_wall_graph.py
(+74 files in other folders)
