[project]
name = "archviz-ai"
version = "0.1.0"
description = "AI-powered architectural visualization pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "ezdxf>=1.1.0",
    "numpy>=1.26.0",
    "pillow>=10.2.0",
    "svgwrite>=1.4.3",
    "trimesh>=4.0.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "aiofiles>=23.2.0",
    "httpx>=0.26.0",
    # Azure SDK
    "openai>=1.12.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
    # Optional: Anthropic as fallback
    "anthropic>=0.18.0",
    # Firebase Admin SDK for push notifications
    "firebase-admin>=6.4.0",
    # Geometry processing
    "shapely>=2.0.0",
    "rtree>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
gpu = [
    "torch>=2.1.0",
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "api"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:ezdxf.*",
]
